# Emotionless

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile.common  Makefile.libretro  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  bit_set.h  breakpoint.cpp  breakpoint.h  code_block.h  common.h  common_types.h  cpu_detect.h  log.cpp  log.h  memory_util.cpp  memory_util.h  x64_cpu_detect.cpp
src/common/emitters/: x64_emitter.cpp  x64_emitter.h
src/core/: CMakeLists.txt  main.cpp  main.h  memmap.cpp  memmap.h
src/core/ee/: ee.cpp  ee.h  ee_core_base.h  ee_inst.h
src/core/ee/interpreter/: interpreter.cpp  interpreter.h  interpreter_branch.cpp  interpreter_cop0.cpp  interpreter_cop1.cpp  interpreter_integer.cpp  interpreter_loadstore.cpp  interpreter_mmi.cpp  interpreter_tables.cpp  interpreter_tables.h
src/core/ee/jit/jit-x64/: jit_x64.cpp  jit_x64.h
src/core/ee/jit64/: jit.cpp  jit.h  jit_reg_cache.cpp  jit_reg_cache.h
src/core/ee/jit64common/: jit_base.cpp  jit_base.h  jit_cache.cpp  jit_cache.h  jit_util.cpp  jit_util.h
src/core/hle/: bios_hle.cpp  bios_hle.h  elf.cpp  elf.h
src/core/hw/: dmac.cpp  dmac.h  gif.cpp  gif.h
src/core/hw/gs/: gs.cpp  gs.h  gs_core_base.h
src/core/iop/: iop.cpp  iop.h  iop_core_base.h  iop_inst.h
src/core/iop/interpreter/: interpreter.cpp  interpreter.h  interpreter_branch.cpp  interpreter_cop0.cpp  interpreter_integer.cpp  interpreter_loadstore.cpp  interpreter_tables.cpp  interpreter_tables.h
src/ui/cli/: CMakeLists.txt  main.cpp
src/ui/libretro/: libretro.cpp
src/ui/qt/: CMakeLists.txt  main.cpp  main.h  main.ui
src/ui/qt/debugger/: debugger.cpp  debugger.h  debugger.ui  register.cpp  register.h  register.ui
